crates/alder-parse/src/expression/snapshots/alder_parse__expression__variable__tests__error_reserved_if.snap
---
source: crates/alder-parse/src/expression/variable.rs
description: "Code:\n\nif"
---
Start(
    1,
    1,
)
