crates/alder-parse/src/expression/snapshots/alder_parse__expression__variable__tests__lower_simple.snap
---
source: crates/alder-parse/src/expression/variable.rs
description: "Code:\n\nfoo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 4,
        },
    },
    value: Var {
        kind: LowVar,
        name: "foo",
    },
}
