crates/alder-parse/src/expression/snapshots/alder_parse__expression__variable__tests__multi_qualified_lower.snap
---
source: crates/alder-parse/src/expression/variable.rs
description: "Code:\n\nA.B.C.foo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: VarQual {
        kind: LowVar,
        module: "A.B.C",
        name: "foo",
    },
}
