crates/alder-parse/src/expression/snapshots/alder_parse__expression__variable__tests__multi_qualified_upper.snap
---
source: crates/alder-parse/src/expression/variable.rs
description: "Code:\n\nA.B.C.Foo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: Var {
        kind: CapVar,
        name: "A.B.C.Foo",
    },
}
