crates/alder-parse/src/expression/snapshots/alder_parse__expression__variable__tests__qualified_lower.snap
---
source: crates/alder-parse/src/expression/variable.rs
description: "Code:\n\nModule.foo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 11,
        },
    },
    value: VarQual {
        kind: LowVar,
        module: "Module",
        name: "foo",
    },
}
